# ytx

./: Cargo.toml  README.md
docs/: ytx-design.md
src/: cache.rs  cli.rs  config.rs  lib.rs  main.rs  output.rs  summarize.rs  whisper.rs  youtube.rs
