[package]
name = "ytx"
version = "0.1.0"
edition = "2024"
authors = ["Scott Aidler <scott@aidler.com>"]
build = "build.rs"
description = "YouTube transcript extractor"

[dependencies]
clap = { version = "4", features = ["derive"] }
eyre = "0.6"
log = "0.4"
env_logger = "0.11"
dirs = "6"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "multipart"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.37"
tokio = { version = "1", features = ["full"] }
regex = "1"
html-escape = "0.2"
toml = "1.0.3"

[build-dependencies]
